--- a/manual/KITFORTH.tex
+++ b/manual/KITFORTH.tex
@@ -1,11 +1,16 @@
 \input{header}
 
 \author{Dmitry Ponyatov \email{dponyatov@gmail.com} GPLv3}
-\title{KITFORTH\\руковоодство программиста}
+\title{{\Huge\ }\\KITFORTH\\руководство программиста}
+\input{date}
 
 \begin{document}
 
 \maketitle
-\tableofcontents
+\tableofcontents\secdown
+
+\input{intro/intro}
+\input{FORTH/FORTH}
+\input{compiler/compiler}
 
 \end{document}
