--- a/manual/header.tex
+++ b/manual/header.tex
@@ -64,6 +64,7 @@
 \usepackage{framed}
 
 %% typical macros
+\newcommand{\hremd}[2]{\href{#2}{#1}}
 \newcommand{\email}[1]{$<$\href{mailto:#1}{#1}$>$}
 \newcommand{\note}[1]{\footnote{\ #1}}
 \renewcommand{\emph}[1]{\textcolor{blue}{#1}}
