--- a/manual/intro/intro.tex
+++ b/manual/intro/intro.tex
@@ -1,3 +1,4 @@
+\clearpage
 \secly{Программирование для кофеварки ?!}\label{intro}
 
 \noindent
@@ -5,9 +6,10 @@
 программиста}, выпавшее из коробки\note{пока доступно только в электронном виде
 на сайте проекта:\\\url{https://github.com/ponyatov/KITFORTH/releases/laetst/} в
 виде \file{.pdf}\ файла} с вафельницей или минипечкой. К сожалению, не с
-чайником или плитой: технологию IoT\note{интернет вещей, Internet-Of-Things}\
-поддерживают только два устройства, которые я кое-как смог запихать на кухню:
-\begin{itemize}[nosep]
+чайником или плитой: технологию IoT\note{интернет вещей, Internet-of-Things}\
+поддерживают пока только два устройства, которые я кое-как смог запихать на
+кухню:
+\begin{itemize}
   \item 
 Микропечь
 \hremd{Kitfort KT-1709}{https://kitfort.ru/catalog/duhovki/17341/}
@@ -20,3 +22,7 @@
 Хотя вряд ли, скорее всего вы купили комплект ``микродуховка для программиста''
 сами себе, потому что вас зацепила идея пощщупать технологию интернета вещей
 вживую, или просто получили в подарок.
+
+\clearpage
+\secly{Откуда взялась идея}
+
