Signed-off-by: Dmitry Ponyatov <dponyatov@gmail.com>

--- a/manual/intro/intro.tex
+++ b/manual/intro/intro.tex
@@ -26,3 +26,15 @@
 \clearpage
 \secly{Откуда взялась идея}
 
+Технология IoT была для вас только хайпом, потому что до сих пор
+цена на ``умные'' бытовые устройства зашкаливала, чтобы взять их просто ``на
+попробовать''. Другая проблема, куда более важная\ --- каждый производитель
+пилит свой собственный набор протоколов, и полностью закрытое программное
+обеспечение. Особенно весело с этим у китайской продукции с AliExpress, весело
+продающейся и в ближайших магазинах под нескольми дешевыми типа брендами.
+Вы покупаете устройство, например action камеру. В комплекте идет приложение под
+Android (то есть все остальные виды компьютеров сразу в пролете). Допустим вы
+его ставите, дав разрешение на все возможные действия, включая международные
+звонки и снятие отпечатков пальцев. Через два месяца приложение обновляется на
+Play Store, и выясняется что теперь оно требует как минимум Android 9, и не
+работает ни на одном из ваших устройств.
