Signed-off-by: Dmitry Ponyatov <dponyatov@gmail.com>

--- a/manual/intro/intro.tex
+++ b/manual/intro/intro.tex
@@ -4,7 +4,7 @@
 \noindent
 Бадумтс-с-с! Вся семья сбежалась смотреть на чудо\ --- \textit{руководство
 программиста}, выпавшее из коробки\note{пока доступно только в электронном виде
-на сайте проекта:\\\url{https://github.com/ponyatov/KITFORTH/releases/laetst/} в
+на сайте проекта:\\\url{https://github.com/ponyatov/KITFORTH/releases/latest/} в
 виде \file{.pdf}\ файла} с вафельницей или минипечкой. К сожалению, не с
 чайником или плитой: технологию IoT\note{интернет вещей, Internet-of-Things}\
 поддерживают пока только два устройства, которые я кое-как смог запихать на
@@ -21,20 +21,41 @@
 \noindent
 Хотя вряд ли, скорее всего вы купили комплект ``микродуховка для программиста''
 сами себе, потому что вас зацепила идея пощщупать технологию интернета вещей
-вживую, или просто получили в подарок.
+вживую, пользуясь готовым устройством из коробки.
 
 \clearpage
 \secly{Откуда взялась идея}
 
-Технология IoT была для вас только хайпом, потому что до сих пор
-цена на ``умные'' бытовые устройства зашкаливала, чтобы взять их просто ``на
+Технология IoT была для вас только хайпом, потому что до сих пор цена на
+``умные'' бытовые устройства зашкаливала, чтобы взять их просто ``на
 попробовать''. Другая проблема, куда более важная\ --- каждый производитель
 пилит свой собственный набор протоколов, и полностью закрытое программное
 обеспечение. Особенно весело с этим у китайской продукции с AliExpress, весело
 продающейся и в ближайших магазинах под нескольми дешевыми типа брендами.
 Вы покупаете устройство, например action камеру. В комплекте идет приложение под
-Android (то есть все остальные виды компьютеров сразу в пролете). Допустим вы
-его ставите, дав разрешение на все возможные действия, включая международные
-звонки и снятие отпечатков пальцев. Через два месяца приложение обновляется на
-Play Store, и выясняется что теперь оно требует как минимум Android 9, и не
-работает ни на одном из ваших устройств.
+Android\note{то есть все остальные виды компьютеров сразу в пролете}.
+Допустим вы его ставите, дав разрешение на все возможные действия, включая
+международные звонки и снятие отпечатков пальцев. Через два месяца приложение
+обновляется на Play Store, и выясняется что теперь оно требует как минимум
+Android 99, и не работает ни на одном из ваших телефонов.
+
+\begin{framed}
+\noindent
+Закрытая прошивка имеет одно очень важное свойство\ --- вы можете использовать
+устройство только так, как это заложил производитель. Все возможные проблемы и
+ошибки в прошивке, приводящие к неправильному функционированию,
+\emph{принципиально неизлечимы}. Даже если предусмотрена возможность ее
+обновления, чаще всего производитель не исправляет некричные ошибки, забивает на
+поддержку сразу после выхода следующей модели, и уж тем более не предоставляет
+никакой технической поддержки пользователям, хотящим странного.
+\end{framed}
+
+\noindent
+Для дорогих брендовых моделей ситуация чуть получше, выходит 1-2 обновления,
+поддерка старых моделей прекращается немного позже, а опции и нестандартные
+решения предоставляются по стоимости сравнимой с новым устройством следующего
+поколения.
+
+\clearpage
+\secly{OpenSource \& OpenHardware}
+
