--- a/manual/intro/intro.tex
+++ b/manual/intro/intro.tex
@@ -53,9 +53,38 @@ Android 99, и не работает ни на одном из ваших тел
 \noindent
 Для дорогих брендовых моделей ситуация чуть получше, выходит 1-2 обновления,
 поддерка старых моделей прекращается немного позже, а опции и нестандартные
-решения предоставляются по стоимости сравнимой с новым устройством следующего
+решения предоставляются по стоимости, сравнимой с новым устройством следующего
 поколения.
 
 \clearpage
 \secly{OpenSource \& OpenHardware}
+
+Идеология OpenSource предлагает совершенно другие возможности даже неопытному
+пользователю, не говоря о тех кто в теме \term{embedded разработки}.
+
+Производитель оборудования полностью снимает с себя ответственность по
+поддержке продукта, предоставляя только апаратную базу, и прошивку,
+обеспечивающие вам только базовые функции, доступные из коробки. Взамен
+производитель предоставляет полный исходный код прошивки, и общую схему
+устройства, на которой указано куда и что подключено.
+
+В результате вы как конечный пользователь, от этого только выигрываете, так как
+\emph{поддержку берет на себя сообщество пользователей}. Общаясь в сети на
+открытых ресурсах\note{как минимум веб-форум производителя}, вы можете найти
+способ реализовать любые ваши хотелки, даже если совершенно не разбираетесь в
+программировании\ --- если идея интересна, найдутся достаточно опытные
+пользователи, способные ее реализовать, и поделиться с вами результатом.
+
+Правильно написанная документация, и помощь открытого сообщества поможет вам при
+желании освоить программирование устройства на самом минимальном уровне, и при
+этом делать достаточно сложные и нестандартные вещи. \emph{Даже просто повторяя
+и комбинируя шаги, описанные в постах на веб-форуме, вы можете получить
+возможности, недостижимые в традиционных даже самых дорогих моделях}. Для тех
+же, кто уже имеет некоторые навыки, особенно в электронике, открываются
+совершенно неограниченные возможности.
+
+Если производитель закроет производство вашей модели, даже через несколько лет
+вы сможете так же пользоваться вашей умной плитой, добавлять новые фишки и
+нестандартные применения, до тех пор пока устройство в принципе способно
+работать.
 
