--- a/manual/intro/intro.tex
+++ b/manual/intro/intro.tex
@@ -24,7 +24,7 @@
 вживую, пользуясь готовым устройством из коробки.
 
 \clearpage
-\secly{Откуда взялась идея}
+\secly{Мир свихнулся: Linux даже в тостере}
 
 Технология IoT была для вас только хайпом, потому что до сих пор цена на
 ``умные'' бытовые устройства зашкаливала, чтобы взять их просто ``на
@@ -62,11 +62,11 @@ Android 99, и не работает ни на одном из ваших тел
 Идеология OpenSource предлагает совершенно другие возможности даже неопытному
 пользователю, не говоря о тех кто в теме \term{embedded разработки}.
 
-Производитель оборудования полностью снимает с себя ответственность по
-поддержке продукта, предоставляя только апаратную базу, и прошивку,
-обеспечивающие вам только базовые функции, доступные из коробки. Взамен
-производитель предоставляет полный исходный код прошивки, и общую схему
-устройства, на которой указано куда и что подключено.
+Производитель оборудования полностью снимает с себя ответственность по поддержке
+продукта, предоставляя только ``железо'', и прошивку обеспечивающую вам только
+базовые функции, доступные из коробки. Взамен производитель предоставляет полный
+исходный код прошивки, и общую схему устройства, на которой указано куда и что
+подключено.
 
 В результате вы как конечный пользователь, от этого только выигрываете, так как
 \emph{поддержку берет на себя сообщество пользователей}. Общаясь в сети на
@@ -87,4 +87,49 @@ Android 99, и не работает ни на одном из ваших тел
 вы сможете так же пользоваться вашей умной плитой, добавлять новые фишки и
 нестандартные применения, до тех пор пока устройство в принципе способно
 работать.
+
+\clearpage
+\secly{Почему именно бытовая техника для кухни?}
+
+Готовка\ --- процесс достаточно сложный, но при этом он неплохо поддается
+автоматизации. Возьмите любой рецепт, и вы сразу увидите в нем
+последовательность действий\ --- \termdef{алгоритм}{алгоритм}. В очень многих
+учебниках по программированию с первых страниц именно рецепты приводятся как
+полный аналог выполнения \textit{вами} \termdef{программы}{программа}, то есть
+последовательностей действий, иногда разных в зависимости от условий.
+
+Взгляните на любую СВЧ-печь, или плиту, даже самую примитивную\ --- вы увидите
+\termdef{устройства ввода}{устройство ввода}: ручки установки режима
+(температуры, можности), и установки временных интервалов (таймер). На моделях
+чуть подороже добавляются кнопки выбора \term{опций}\ --- экономичный режим,
+кофе двойной плотности, стирка с отсрочкой. Почти любой бытовой прибор сообщает
+вам свое состояние через \termdef{устройства вывода}{устройство вывода}: как
+минимум есть лампочки включения/готовности, текущее время и дата, отсчет
+таймера, температура на которую настроена духовка, и т.п. На дорогих моделях
+стоят как минимум текстовые, и иногда и графические \term{дислпеи}.
+
+\bigskip
+Но все же не хватает чего-то важного. Каждый раз, на каждом следующем пункте
+рецепта вам нужно вручную выставлять единственный таймер, не забыть сделать то,
+порезать и положить сё, догнать внезапно убежавшее за молоком кофе, потушить
+курицу\ldots водой потому что вам позвонили, и вы забыли ее выключить.
+
+Никто не предлагает делать полную автоматизацию процесса с дозаторами, и
+мешалками (разве что домашние пивовары, ау!), но множество вещей крайне полезно:
+\begin{itemize}[nosep]
+  \item точный контроль температуры, неплохо если с термопрофилями (изменение
+  температуры по расписанию)
+  \item отмеривание времени\ --- несколько независимых таймеров, до десятка,
+  которые при необходимости могут запускать и останавливать друг друга
+  \item оповещение пользователя о \term{событиях}, причем разных и разным
+  звуком, а не единственный будильник для четырех включенных конфорок.
+  \item весы, которые могут послать электрокастрюле сколько мяса вы в нее
+  кладете, чтобы она пересчитала время и мощность нагрева.
+\end{itemize}
+
+\medskip\noindent
+Другими словами, \emph{не хватает возможности полноценного} относительно
+сложного \emph{программирования} с реакцией на внешние события, и
+взаимодействим с человеком, и устройств друг с другом.
+
 
