--- a/manual/intro/intro.tex
+++ b/manual/intro/intro.tex
@@ -129,7 +129,36 @@ Android 99, и не работает ни на одном из ваших тел
 
 \medskip\noindent
 Другими словами, \emph{не хватает возможности полноценного} относительно
-сложного \emph{программирования} с реакцией на внешние события, и
-взаимодействим с человеком, и устройств друг с другом.
+сложного \emph{программирования} с реакцией на внешние события, взаимодействия с
+человеком, и устройств друг с другом.
 
+Да, вы можете запрограммировать старальную машину\ --- включиться утром. Но нет
+способа указать ей делать это только в выходные, \textbf{или} если нет дома
+какого-то члена семьи (телефон не подключался к WiFi несколько часов),
+\textbf{и} откладывать запуск каждого цикла стирки пока включена плита, чтобы не
+перегружать проводку.
+
+\clearpage
+Первым кандидатом на переделку была выбрана самая дешевая и компактная
+микропечь\ --- очень универсальное по функциям устройство, регулярно
+востребованное потенциальной целевой аудиоторией для разогрева бутеров:
+``паяльниками'' и программистами, которые могут стать костяком открытого
+сообщества разработчиков.
+
+\fig{img/KT_1907.png}{height=.65\textheight}
+
+\noindent
+\hremd{Kitfort KT-1709}{https://kitfort.ru/catalog/duhovki/17341/} самый дешевый
+и компактный вариант из всего, что было доступно в магазинах, при этом имеет
+идеальное сочетание размеров и дизайна, для установке на столе
+среднестатистического кнопкодава. Также имеет значительную конструкционную
+особенность\ --- блок автоматики расположен в подвале, регулятор расположен в
+удачном месте для замены на джойстик или энкодер, а конструкция корпуса позвляет
+организовать принудительный всос \emph{холодного} воздуха для охлаждения
+электроники.
+
+\bigskip\textit{
+К сожалению по первому осмотру подвал не подвал, и в нем уместятся только пара
+оптосимисторов, и крутилка\ --- блок электроники придется выносить в отдельном
+блоке.}
 
