--- a/manual/KITFORTH.tex
+++ b/manual/KITFORTH.tex
@@ -33,7 +33,7 @@ License along with this program.  If not, see
 \tableofcontents\secdown
 
 \input{intro/intro}
-\input{FORTH/FORTH}
-\input{compiler/compiler}
+% \input{FORTH/FORTH}
+% \input{compiler/compiler}
 
 \end{document}
