--- a/manual/header.tex
+++ b/manual/header.tex
@@ -62,6 +62,8 @@
 \usepackage{multirow}
 %% frames
 \usepackage{framed}
+%% checkmark
+\usepackage{amssymb}
 
 %% typical macros
 \newcommand{\hremd}[2]{\href{#2}{#1}}
