--- a/manual/intro/intro.tex
+++ b/manual/intro/intro.tex
@@ -159,6 +159,36 @@ Android 99, и не работает ни на одном из ваших тел
 
 \bigskip\textit{
 К сожалению по первому осмотру подвал не подвал, и в нем уместятся только пара
-оптосимисторов, и крутилка\ --- блок электроники придется выносить в отдельном
+оптосимисторов, и крутилка\ --- электронику придется выносить в отдельном
 блоке.}
+
+\clearpage
+\secly{\linux\ или не \linux, вот в чем вопрос}
+
+\noindent
+и вопрос неоднозначный:
+
+\medskip\noindent
+\begin{tabular}{l l l l l l}
+модуль & & процессор & цена & WiFi & BT \\
+\hline
+ESP8266EX & & esp8266 & \$2.9 & \checkmark \\
+ESP32 && Xtensa LX6 & \$4.1 & \checkmark & 4.2/BLE \\
+& arm926t & NUC906DK61Y & \$8.17 & \\
+HLK-RM04 & misp32 & RT5350F & \$20.5 & \checkmark \\
+Raspberry Pi 3 B+ & arm & BCM2837B0 &&\\&& 64bit 4x1.4G & \$49.7 & \checkmark \\
+\end{tabular}
+
+\medskip\noindent
+ESP32 кажется идеалом, но он не умеет в \linux, следующий по цене -- нюк, но у
+него нет в комплекте WiFi. Ставить обоих в спарку, или использовать ``Халк'' на
+RT5350F\ -- перебор по цене и ресурсам с учетом задач. Raspberry неадекватны
+задаче по цене, но имеют самое дружественное сообщество.
+
+\clearpage
+\secly{Язык \F\ --- вечно живой}
+
+Если учесть зоопарк модулей, которые желающие захотят использовать в проектах по
+йотификации домашней техники
+
 
