--- a/manual/intro/intro.tex
+++ b/manual/intro/intro.tex
@@ -293,7 +293,15 @@ BT и TPC/IP стека и веб-сервера, поэтому для макс
 \clearpage
 С развитием и внедрением технологий Интернета вещей начинают играть другие грани
 \F а: легкая портируемость на любые аппаратные платформы с сохранением
-низкоуровневого доступа к аппаратуре, и крайне низкие требования к железу.
-16-битная \F-система вполне способна работать всего на нескольких Кб ОЗУ, имеет
-очень компактных код
+низкоуровневого доступа к ``железу'', и крайне низкие требования к ресурсам.
+16-битная \F-система вполне способна работать всего на нескольких Кб ОЗУ, и
+имеет очень компактный код (имеет значение если вы хотите обновлять IoT
+устройства по воздуху).
+
+\emph{Для IoT приложений \F\ интересен} с точки зрения его использования
+\emph{как универсальный \textbf{перепрограммируемый} протокол}, который может
+быть использован не только узлами сети для обмена данными и командами, но и
+использован непосредственно человеком, через самый универсальный тип интерфейса\
+--- последовательный канал связи, и командную строку.
+
 
