Signed-off-by: Dmitry Ponyatov <dponyatov@gmail.com>

--- a/manual/intro/intro.tex
+++ b/manual/intro/intro.tex
@@ -304,4 +304,8 @@ BT и TPC/IP стека и веб-сервера, поэтому для макс
 использован непосредственно человеком, через самый универсальный тип интерфейса\
 --- последовательный канал связи, и командную строку.
 
-
+В IoT существует значимая проблема\ --- отсутствие универсального и одновременно
+очень компактного протокола верхнего уровня для представления данных и передачи
+команд, который бы был простым для (де)сери\-али\-зации на устройствах с очень
+простыми микроконтроллерами, но при этом максимально универсальным. MQTT
+обеспечивает транспорт данных, но никак не описывает форматы и семантику.
