--- a/manual/header.tex
+++ b/manual/header.tex
@@ -82,9 +82,11 @@
 \newcommand{\emc}{$C$}
 \newcommand{\cpp}{$C^{+_+}$}
 \newcommand{\F}{\texttt{\textbf{Форт}}}
+\newcommand{\kf}{KITFORTH}
 \newcommand{\eclipse}{Eclipse}
 \newcommand{\vim}{(g)Vim}
 \newcommand{\linux}{Linux}
 \newcommand{\win}{Windows}
+\newcommand{\iot}{IoT}
 
 \newcommand{\cm}[1]{Cortex-M#1}
