--- a/manual/intro/intro.tex
+++ b/manual/intro/intro.tex
@@ -290,22 +290,4 @@ BT и TPC/IP стека и веб-сервера, поэтому для макс
 общего назначения, это \textbf{язык командной оболочки}}, и примерно аналогичен
 языку SHELL в unix-системах.
 
-\clearpage
-С развитием и внедрением технологий Интернета вещей начинают играть другие грани
-\F а: легкая портируемость на любые аппаратные платформы с сохранением
-низкоуровневого доступа к ``железу'', и крайне низкие требования к ресурсам.
-16-битная \F-система вполне способна работать всего на нескольких Кб ОЗУ, и
-имеет очень компактный код (имеет значение если вы хотите обновлять IoT
-устройства по воздуху).
-
-\emph{Для IoT приложений \F\ интересен} с точки зрения его использования
-\emph{как универсальный \textbf{перепрограммируемый} протокол}, который может
-быть использован не только узлами сети для обмена данными и командами, но и
-использован непосредственно человеком, через самый универсальный тип интерфейса\
---- последовательный канал связи, и командную строку.
-
-В IoT существует значимая проблема\ --- отсутствие универсального и одновременно
-очень компактного протокола верхнего уровня для представления данных и передачи
-команд, который бы был простым для (де)сери\-али\-зации на устройствах с очень
-простыми микроконтроллерами, но при этом максимально универсальным. MQTT
-обеспечивает транспорт данных, но никак не описывает форматы и семантику.
+\input{intro/iot}
