--- a/manual/intro/iot.tex
+++ b/manual/intro/iot.tex
@@ -1,5 +1,5 @@
 \clearpage
-\secly{\iot: Интернет вещей}
+\secly{\iot: универсальный протокол для Интернета вещей}
 
 С развитием и внедрением технологий Интернета вещей начинают играть другие грани
 \F а: легкая портируемость на любые аппаратные платформы с сохранением
