Signed-off-by: Dmitry Ponyatov <dponyatov@gmail.com>

--- a/manual/implement/way.tex
+++ b/manual/implement/way.tex
@@ -5,3 +5,12 @@
 программисты, которые им пользуются. Важно, чтобы сам язык жил и развивался,
 появлялись его новые реализации под свежие платформы, и программисты, которые
 развивают сам язык.
+
+Для прикладных программистов, или даже начинающих только изучать язык, важно
+иметь доступный источник информации, как язык устроен внутри, как работает, и как
+можно влезть в него и что-то добавить или поменять при необходимости.
+
+Если вам понравилось использовать \F\ в вашей кофеварке, и вы хотите добавить
+что-то подобное в ваш проект на работе, или перенести \kf\ на неподдерживаемое
+устройство, этот раздел сможет помочь сделать собственную реализацию \F а,
+именно такую которая нужна именно вам.
