--- a/manual/FORTH/FORTH.tex
+++ b/manual/FORTH/FORTH.tex
@@ -7,7 +7,8 @@
 /pdf/
   \item 
 \hremd{Броуди Л. Начальный курс программирования
-на языке Форт}{http://www.nncron.ru/book/sf/}. - М.: Финансы и статистика, 1990
+на языке Форт}{http://www.nncron.ru/book/sf/}\\ -- М.: Финансы и статистика,
+1990
 \hremd{pdf}{http://www.nncron.ru/download/sf.pdf}
   \item 
 \url{http://www.forth.org.ru/~cactus/library.htm}
