--- a/manual/intro/intro.tex
+++ b/manual/intro/intro.tex
@@ -165,6 +165,8 @@ Android 99, и не работает ни на одном из ваших тел
 \clearpage
 \secly{\linux\ или не \linux, вот в чем вопрос}
 
+\fig{img/pinguin.jpeg}{height=.75\textheight}
+
 \noindent
 и вопрос неоднозначный:
 
